--- a/src/components/Contact/PageContact.css
+++ b/src/components/Contact/PageContact.css
@@ -99,8 +99,9 @@
         width: 100%;
     }
     .conteneur .contactInfo .box .text h3 {
+        /* display: flex-start; */
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
         
     }
     .content1 p {
